# FASTAPI_DO_ZERO

./: .coverage  .env  .gitignore  README.md  database.db  pyproject.toml
fast_zero/: app.py  models.py  schemas.py
migrations/versions/: bf922e88883d_create_users_table.py  ce06387cfc60_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
